# patron

./: .gitignore  README.md  build_catalog.py  pyproject.toml
.github/workflows/: pages.yml
newapp/: 1-process_ocr.py  2-add_metadata.py  3-consolidate_profiles.py  4-extend_profiles.py  index.html  refine-data.py  run_pipeline.py
src/glm_ocr_json/: __init__.py  cli.py  discovery.py  ocr.py  pipeline.py  schema.py
tests/: test_discovery.py  test_structure.py
web/: README.md  app.js  catalog.json  implementation-plan-analytics-github-pages-sheets.md  index.html  propuesta-comercial-catalogo-web-es-ejecutiva.md  propuesta-comercial-catalogo-web-es.md  styles.css
web/scripts/: expand-catalog-media.js  move_patron_media.py
