[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "glm-ocr-json"
version = "0.1.0"
description = "CLI helper that runs Ollama's glm-ocr model and transforms text output into JSON."
authors = [{ name = "patron-user" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
glm-ocr-json = "glm_ocr_json.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
